basic styling added to gamepage

--- a/gamepage.html
+++ b/gamepage.html
@@ -12,12 +12,21 @@
 	<div class="center">
 		<h2 class="question">This is where the question will show</h2>
 		<div class="answers">
-			<p>answer1</p>
-			<p>answer2</p>
-			<p>answer3</p>
-			<p>answer4</p>
+			<div class="answers-box">
+				<p class="answer-text">answer1</p>
+			</div>
+			<div class="answers-box">
+				<p class="answer-text">answer2</p>
+			</div>
+			<div class="answers-box">
+				<p class="answer-text">answer3</p>
+			</div>
+			<div class="answers-box">
+				<p class="answer-text">answer4</p>
+			</div>
 		</div>
 	</div>
+	<script src="gamepage.js"></script>
 </body>
 
 </html>
