--- a/gamepage.html
+++ b/gamepage.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="center">
-		<h2 class="question">This is where the question will show</h2>
+		<h2 id="question"></h2>
 		<div class="answers">
 			<div class="answers-box">
 				<p class="answer-text">answer1</p>
