--- a/gamepage.html
+++ b/gamepage.html
@@ -13,16 +13,16 @@
 		<h2 id="question"></h2>
 		<div class="answers">
 			<div class="answers-box">
-				<p class="answer-text">answer1</p>
+				<p class="answer-text" data-number="1">>answer1</p>
 			</div>
 			<div class="answers-box">
-				<p class="answer-text">answer2</p>
+				<p class="answer-text" data-number="2">>answer2</p>
 			</div>
 			<div class="answers-box">
-				<p class="answer-text">answer3</p>
+				<p class="answer-text" data-number="3">>answer3</p>
 			</div>
 			<div class="answers-box">
-				<p class="answer-text">answer4</p>
+				<p class="answer-text" data-number="4">>answer4</p>
 			</div>
 		</div>
 	</div>
