question counter and score counter added

--- a/gamepage.html
+++ b/gamepage.html
@@ -10,6 +10,12 @@
 </head>
 <body>
 	<div class="center">
+		<div class="hud">
+			<p id="question-number-text">Question</p>
+			<p id="question-number">num</p>
+			<p id="score">Score</p>
+			<p id="score-number">0</p>
+		</div>
 		<h2 id="question"></h2>
 		<div class="answers">
 			<div class="answers-box">
