more styling done and adding of progressbar

--- a/gamepage.html
+++ b/gamepage.html
@@ -16,6 +16,10 @@
 			<p id="score">Score</p>
 			<p id="score-number">0</p>
 		</div>
+		<div id="progressbar">
+			<div id="progressbar-filled-up">
+			</div>
+		</div>
 		<h2 id="question"></h2>
 		<div class="answers">
 			<div class="answers-box">
