--- a/gamepage.html
+++ b/gamepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>QuizGame - Game</title>
 	<link rel="stylesheet" href="app.css">
 	<link rel="stylesheet" href="gamepage.css">
@@ -12,7 +12,7 @@
 	<div class="center">
 		<div class="hud">
 			<p id="question-number-text">Question</p>
-			<p id="question-number">num</p>
+			<p id="question-number"></p>
 			<p id="score">Score</p>
 			<p id="score-number">0</p>
 		</div>
@@ -23,16 +23,16 @@
 		<h2 id="question"></h2>
 		<div class="answers">
 			<div class="answers-box">
-				<p class="answer-text">answer1</p>
+				<p class="answer-text"></p>
 			</div>
 			<div class="answers-box">
-				<p class="answer-text">answer2</p>
+				<p class="answer-text"></p>
 			</div>
 			<div class="answers-box">
-				<p class="answer-text">answer3</p>
+				<p class="answer-text"></p>
 			</div>
 			<div class="answers-box">
-				<p class="answer-text">answer4</p>
+				<p class="answer-text"></p>
 			</div>
 		</div>
 	</div>
