styling done on endpage

--- a/endpage.html
+++ b/endpage.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SportQuiz</title>
+    <title>Finished</title>
 	<link rel="stylesheet" href="app.css">
+	<link rel="stylesheet" href="gamepage.css">
 </head>
 <body>	
 	<div class="center">
-		<h1>You made it to the final page! Congrats!!</h1>
+		<h1>Quiz finished</h1>
+		<div class="hud">
+			<p id="finalScore">You scored</p>
+			<p id="score-number">0</p>
+			<p id="points">points</p>
+			<p>out of 100</p>
+		</div>
+		<a class="playbutton" id="homebtn" href ="index.html">Home</a>
 	</div>
+	<script src="endpage.js"></script>
 </body>
 
 </html>
